# SecurityToolbox-CLI

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  install-linux.sh  install-windows.ps1  pyproject.toml
src/stbox/: __init__.py  __main__.py  cli.py  config.py  models.py  orchestrator.py  scope.py  utils.py
src/stbox/parsers/: __init__.py
src/stbox/passive/: __init__.py  cms_detect.py  crtsh.py  dns_lookup.py  exposures.py  headers_check.py  js_libs.py  tls_check.py  wayback.py
src/stbox/report/: __init__.py  html.py  json_.py  markdown.py
src/stbox/report/templates/: report.html.j2
src/stbox/runners/: __init__.py  arjun.py  base.py  dalfox.py  feroxbuster.py  ffuf.py  httpx_runner.py  hydra.py  katana.py  kiterunner.py  medusa.py  nikto.py  nuclei.py  nuclei_workflows.py  retire.py  sqlmap.py  subfinder.py  wfuzz.py  wpscan.py
tests/: test_scope.py
workflows/: exposed-dashboards.yaml  lfi-to-sensitive-files.yaml  ssrf-to-cloud-metadata.yaml  wordpress-deep.yaml
