[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stbox"
version = "0.1.0"
description = "SecurityToolbox CLI — orchestrates pentest tools (Nuclei, Nikto, SQLmap, Katana, Feroxbuster, Arjun, Dalfox, wpscan, httpx, subfinder) into a unified report."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Javii Hernandez" }]
keywords = ["security", "pentest", "scanner", "nuclei", "sqlmap", "recon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "dnspython>=2.6.0",
    "tldextract>=5.1.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[project.scripts]
stbox = "stbox.cli:app"

[project.urls]
Repository = "https://github.com/JaviiHernandez/SecurityToolbox-CLI"
Issues = "https://github.com/JaviiHernandez/SecurityToolbox-CLI/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/stbox"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
